fix styling for counter of nice-list in CareerPathTracks component to be behind list item

--- a/src/components/organisms/CareerPathTracks/styles.module.scss
+++ b/src/components/organisms/CareerPathTracks/styles.module.scss
@@ -23,6 +23,7 @@
 	ol.nice-list {
 		position: relative;
 		margin-left: 0;
+		z-index: 0;
 		> li {
 			&:before {
 				content: counter(li);
@@ -31,6 +32,7 @@
 				font-size: $fontSizeDisplay;
 				font-weight: $fontWeightBlack;
 				margin: -1ch 0 0 -2.5ch;
+				z-index: -1;
 			}
 		}
 	}
